@@ -7,7 +7,7 @@
 .hy 0
 .nr HY 0
 
-.TH lz4 man
+.TH lz4 "1" "2014-02-27" "lz4" "User Commands"
 .SH NAME
 \fBlz4\fR - Extremely fast compression algorithm
 
